<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_choose_chart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nuvoton.ukeeper.ChooseChart"
    android:orientation="vertical">


    <Button
        android:text="@string/temperature_label"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/chart_temperature"
        android:layout_gravity="center"
        android:background="@mipmap/banner_orange"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="50dp"/>

    <Button
        android:text="@string/humidity_label"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/chart_humid"
        android:layout_gravity="center"
        android:background="@mipmap/banner_orange"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="50dp"/>

    <Button
        android:text="@string/illuminance_label"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/chart_lux"
        android:layout_gravity="center"
        android:background="@mipmap/banner_orange"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="50dp"/>

    <Button
        android:text="@string/activity_label"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/chart_activity"
        android:layout_gravity="center"
        android:background="@mipmap/banner_orange"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="50dp"/>
</LinearLayout>
