<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nuvoton.ukeeper.MainActivity"
    android:orientation="vertical"
    >



    <Button
        android:text="@string/connect_server_label"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/connect"
        android:background="@mipmap/banner_blue"
        android:textColor="@android:color/background_light"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        />

    <Button
        android:text="@string/ukeeper_data_label"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/choose_chart_button"
        android:background="@mipmap/banner_grey"
        android:textColor="@android:color/background_light"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        />

    <Button
        android:text="@string/ukeeper_setup_label"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/choose_setup_button"
        android:background="@mipmap/banner_grey"
        android:textColor="@android:color/background_light"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">
        <TextView
            android:text="@string/key_owner_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textAlignment="center"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/key_spinner"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textAlignment="center"
            />

    </LinearLayout>
    <Button
        android:text="@string/credits_label"
        android:layout_width="75dp"
        android:layout_height="25dp"
        android:id="@+id/credits"
        android:background="@mipmap/banner_grey"
        android:textColor="@android:color/background_light"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"

        />
</LinearLayout>
