<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_choose_setup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nuvoton.ukeeper.ChooseSetup"
    android:orientation="vertical">

    <Button
        android:text="@string/temperature_label"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:id="@+id/setup_temperature"
        android:textColor="@android:color/background_light"
        android:textAlignment="center"
        android:background="@mipmap/banner_green"
        android:layout_gravity="center"/>

    <Button
        android:text="@string/illuminance_label"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:id="@+id/setup_illuminance"
        android:textColor="@android:color/background_light"
        android:textAlignment="center"
        android:background="@mipmap/banner_green"
        android:layout_gravity="center" />

    <Button
        android:text="@string/food_label"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:id="@+id/setup_food"
        android:textColor="@android:color/background_light"
        android:textAlignment="center"
        android:background="@mipmap/banner_green"
        android:layout_gravity="center" />

</LinearLayout>
